# dbverse

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: development.md
docs/superpowers/plans/: 2026-06-08-connection-management-ux.md  2026-06-08-table-browsing-part1-sqlite.md  2026-06-13-redis-support.md  2026-06-20-neo4j-support.md
docs/superpowers/specs/: 2026-06-08-table-browsing-design.md  (+3 more)
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: domain.rs  embeddings.rs  errors.rs  lib.rs  main.rs  neo4j_model.rs  profiles.rs  query_safety.rs  redis_model.rs  result_model.rs  sqlite_schema.rs
src-tauri/src/connectors/: lancedb.rs  mod.rs  neo4j_connector.rs  postgres.rs  redis_connector.rs  sqlite.rs
src/api/: browse.ts  embeddings.ts  errors.ts  lancedb.ts  neo4j.ts  postgres.ts  profiles.ts  redis.ts  sqlite.ts  tauri.ts  types.test.ts  types.ts
src/components/: ConnectionList.test.tsx  ConnectionList.tsx  ConnectionManager.tsx  DbTypePicker.test.tsx  DbTypePicker.tsx  NewConnectionForm.test.tsx  NewConnectionForm.tsx  ObjectTree.tsx  PgPasswordModal.tsx  ResultGrid.tsx  SaveConnectionModal.test.tsx  SaveConnectionModal.tsx  Sidebar.test.tsx  Sidebar.tsx  SidebarTree.neo4j.test.tsx  SidebarTree.redis.test.ts  SidebarTree.test.tsx  SidebarTree.tsx  TabBar.test.tsx  TabBar.tsx  TablePreview.test.tsx  TablePreview.tsx  ThemeToggle.tsx  TypeDropdown.test.tsx  TypeDropdown.tsx  WorkspaceArea.tsx  WorkspaceRouter.tsx
src/types/: react-force-graph-2d.d.ts
src/workspaces/: workspaceSmoke.test.tsx
(+18 files in other folders)
