[package]
name = "dbverse"
version = "0.1.0"
description = "A desktop database explorer for SQLite, PostgreSQL, and LanceDB"
authors = ["dbverse contributors"]
edition = "2021"

[lib]
name = "dbverse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dbverse"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
